Reintroduce `ordermap` as a more ordered `indexmap`

--- a/test-nostd/Cargo.toml
+++ b/test-nostd/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 publish = false
 edition = "2021"
 
-[dependencies.indexmap]
+[dependencies.ordermap]
 path = ".."
 default-features = false
 features = ["serde"]
