--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "ordermap"
 edition = "2021"
-version = "0.4.2"
+version = "0.5.0"
 documentation = "https://docs.rs/ordermap/"
 repository = "https://github.com/indexmap-rs/ordermap"
 license = "Apache-2.0 OR MIT"
@@ -14,22 +14,13 @@ rust-version = "1.63"
 bench = false
 
 [dependencies]
-equivalent = { version = "1.0", default-features = false }
+indexmap = { version = "2.2.6", default-features = false }
 
 arbitrary = { version = "1.0", optional = true, default-features = false }
 quickcheck = { version = "1.0", optional = true, default-features = false }
 serde = { version = "1.0", optional = true, default-features = false }
 borsh = { version = "1.2", optional = true, default-features = false }
 rayon = { version = "1.5.3", optional = true }
-
-# Internal feature, only used when building as part of rustc,
-# not part of the stable interface of this crate.
-rustc-rayon = { package = "rustc-rayon", version = "0.5", optional = true }
-
-[dependencies.hashbrown]
-version = "0.14.1"
-default-features = false
-features = ["raw"]
 
 [dev-dependencies]
 itertools = "0.13"
@@ -42,10 +33,13 @@ serde_derive = "1.0"
 
 [features]
 default = ["std"]
-std = []
+std = ["indexmap/std"]
 
-# for testing only, of course
-test_debug = []
+arbitrary = ["dep:arbitrary", "indexmap/arbitrary"]
+quickcheck = ["dep:quickcheck", "indexmap/quickcheck"]
+rayon = ["dep:rayon", "indexmap/rayon"]
+serde = ["dep:serde", "indexmap/serde"]
+borsh = ["dep:borsh", "indexmap/borsh"]
 
 [profile.bench]
 debug = true
