--- a/test-serde/Cargo.toml
+++ b/test-serde/Cargo.toml
@@ -8,6 +8,6 @@ edition = "2021"
 
 [dev-dependencies]
 fnv = "1.0"
-indexmap = { path = "..", features = ["serde"] }
+ordermap = { path = "..", features = ["serde"] }
 serde = { version = "1.0.99", features = ["derive"] }
 serde_test = "1.0.99"
