--- a/Cargo.toml
+++ b/Cargo.toml
@@ -45,7 +45,8 @@ borsh = ["dep:borsh", "indexmap/borsh"]
 debug = true
 
 [package.metadata.release]
-no-dev-version = true
+allow-branch = ["master"]
+sign-tag = true
 tag-name = "{{version}}"
 
 [package.metadata.docs.rs]
