ci: downgrade hashbrown for 1.63
(cherry picked from commit c095322249f85d36d46c2a8d4808f3e1c70ddb08)

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,6 +46,11 @@ jobs:
       - uses: dtolnay/rust-toolchain@master
         with:
           toolchain: ${{ matrix.rust }}
+      - name: Downgrade dependencies
+        if: matrix.rust == '1.63.0'
+        run: |
+          cargo generate-lockfile
+          cargo update -p hashbrown --precise 0.15.0
       - name: Tests
         run: |
           cargo build --verbose --features "${{ matrix.features }}"
@@ -81,6 +86,11 @@ jobs:
         with:
           toolchain: ${{ matrix.rust }}
           target: ${{ matrix.target }}
+      - name: Downgrade dependencies
+        if: matrix.rust == '1.63.0'
+        run: |
+          cargo generate-lockfile
+          cargo update -p hashbrown --precise 0.15.0
       - name: Tests
         run: |
           cargo build -vv --target=${{ matrix.target }} --no-default-features
@@ -119,6 +129,7 @@ jobs:
         with:
           tool: cargo-hack
       - run: cargo +nightly hack generate-lockfile --remove-dev-deps -Z direct-minimal-versions
+      - run: cargo update -p hashbrown --precise 0.15.0
       - name: Build (nightly)
         run: cargo +nightly build --verbose --all-features
       - name: Build (MSRV)
