--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,7 +19,7 @@ indexmap = { version = "2.9.0", default-features = false }
 arbitrary = { version = "1.0", optional = true, default-features = false }
 quickcheck = { version = "1.0", optional = true, default-features = false }
 serde = { version = "1.0", optional = true, default-features = false }
-borsh = { version = "1.2", optional = true, default-features = false }
+borsh = { version = "1.5.6", optional = true, default-features = false }
 rayon = { version = "1.9", optional = true }
 
 [dev-dependencies]
@@ -38,7 +38,7 @@ arbitrary = ["dep:arbitrary", "indexmap/arbitrary"]
 quickcheck = ["dep:quickcheck", "indexmap/quickcheck"]
 rayon = ["dep:rayon", "indexmap/rayon"]
 serde = ["dep:serde", "indexmap/serde"]
-borsh = ["dep:borsh", "indexmap/borsh"]
+borsh = ["dep:borsh", "borsh/indexmap"]
 
 [profile.bench]
 debug = true
