--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,7 +24,7 @@ rayon = { version = "1.9", optional = true }
 
 [dev-dependencies]
 itertools = "0.14"
-rand = {version = "0.9", features = ["small_rng"] }
+fastrand = { version = "2", default-features = false }
 quickcheck = { version = "1.0", default-features = false }
 fnv = "1.0"
 lazy_static = "1.3"
